# fastapi-template

./: README.md  main.py  pyproject.toml  requirements.txt
api_diagnostics/: router.py
chads_vasc_score/: router.py  utils.py
src/: config.py  main.py
src/api_diagnostics/: router.py  schemas.py
src/chads_vasc_score/: router.py  schemas.py  utils.py
