[project]
name = "fastapi-template"
version = "v1.0.0"
description = "Starter FastAPI template deployable to Health Universe."

readme = "README.md"
license = { file = "LICENSE.txt" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.9"

dependencies = [
    "fastapi~=0.101.1",
    "pydantic-settings~=2.0.3",
    "uvicorn~=0.23.2",
]

[project.optional-dependencies]
dev = [
    "black~=23.7.0",
    "isort~=5.12.0",
    "autoflake~=2.2.0",
    "pre-commit~=3.3.3",
]

[project.urls]
homepage = "https://github.com/Health-Universe/fastapi-template"
tracker = "https://github.com/Health-Universe/fastapi-template/issues"

[tool.black]
color = true
target-version = ['py310']

[tool.isort]
profile = "black"
known_first_party = 'src'
force_to_top = ["annotations"]
include_trailing_comma = true
multi_line_output = 3
combine_as_imports = true
